tests/pass/MultilineComment.java
package pass;

/* This is a multiline comment
second line
third line */

public class MultilineComment {
     /*inserted random multiline comment*/ public int aMethod(int a){
        return a;
    }
}