tests/fail/MultilineComment.java
package pass;

/* This is a multiline comment
second line
third line */

public class A {
     /*inserted random multiline comment*/ public A(int a){
        return a;
    }
}
/* multiline comment
with no closing token